--- a/Broadway.ConsoleApp/Broadway.ConsoleApp.csproj
+++ b/Broadway.ConsoleApp/Broadway.ConsoleApp.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Subject\abstract.cs" />
+    <Compile Include="Subject\Interface.cs" />
     <Compile Include="Subject\Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
